--- a/management/univention-web/css/variables.styl
+++ b/management/univention-web/css/variables.styl
@@ -292,7 +292,6 @@ box-shadow()
 
 transform()
 	transform: arguments
-	-webkit-transform: arguments
 
 	//replace translate3d with translate for ie
 	newArgs = ''
